--- a/vue1/vue-ele-app/package.json
+++ b/vue1/vue-ele-app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-ele",
+  "name": "vue-ele-app",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "1131446340aa <1131446340@qq.com>",
+  "author": "karen <993698262@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -51,6 +52,8 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
