--- a/vue1/vue-ele-app/package.json
+++ b/vue1/vue-ele-app/package.json
@@ -2,7 +2,7 @@
   "name": "vue-ele-app",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "karen <993698262@qq.com>",
+  "author": "",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
