--- a/vue1/vue-ele-app/package.json
+++ b/vue1/vue-ele-app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
+    "element-ui": "^2.12.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
