--- a/vue1/components/package.json
+++ b/vue1/components/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "async-validator": "^3.2.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
