--- a/wxapp/mpvue-koa/mpvue-shop-node/package.json
+++ b/wxapp/mpvue-koa/mpvue-shop-node/package.json
@@ -9,9 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "knex": "^0.20.9",
+    "koa": "^2.11.0",
+    "koa-router": "^8.0.7",
     "less": "^3.10.3",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
+    "mysql": "^2.18.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  },
   "description": ""
 }
