--- a/vue1/music/package.json
+++ b/vue1/music/package.json
@@ -16,6 +16,7 @@
     "stylus-loader": "^3.0.2",
     "vant": "^2.4.1",
     "vue": "^2.5.2",
+    "vue-navigation": "^1.1.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
   },
