--- a/vue1/books/bookstore/package.json
+++ b/vue1/books/bookstore/package.json
@@ -17,8 +17,10 @@
     "babel-plugin-import": "^1.13.0",
     "better-scroll": "^1.15.2",
     "epubjs": "^0.3.85",
+    "stylus": "^0.54.7",
     "vant": "^2.5.2",
     "vue": "^2.5.2",
+    "vue-navigation": "^1.1.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
