--- a/vue1/euct/package.json
+++ b/vue1/euct/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "better-scroll": "^1.15.2",
     "vant": "^2.5.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
